--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
+  <script src="math.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
